Use Yarn for faster package management

--- a/package.json
+++ b/package.json
@@ -29,5 +29,6 @@
     "tslint-microsoft-contrib": "^4.0.0",
     "typescript": "^2.1.4",
     "typings": "^2.1.0"
-  }
+  },
+  "repository": "https://locnguyen@github.com/locnguyen/typescript-node-starter"
 }
