--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "./node_modules/.bin/tslint -c \"tslint.json\" -e \"node_modules/**/*\"  \"./src/**/*.ts*\"",
     "precommit-msg": "echo 'Pre-commit checks...' && exit 0",
     "prettier": "prettier --parser typescript --single-quote --trailing-comma none --tab-width 4 --print-width 120 --write \"./**/*.ts\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "report": "nyc npm run test",
+    "test": "NODE_ENV=test ./node_modules/.bin/mocha --compilers ts:ts-node/register src/**/*.test.ts"
   },
   "precommit": [
     "prettier",
@@ -26,6 +27,7 @@
     "chai": "^4.1.2",
     "mocha": "^4.0.1",
     "nodemon": "^1.12.1",
+    "nyc": "^11.3.0",
     "pre-commit": "^1.2.2",
     "prettier": "^1.8.2",
     "rimraf": "^2.6.2",
