--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,11 @@
         "outDir": "build"
     },
     "compileOnSave": true,
+    "include": [
+        "src/**/*.ts"
+    ],
     "exclude": [
-        "node_modules"
+        "node_modules",
+        "src/**/*.test.ts"
     ]
 }
