--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
   "scripts": {
     "build": "tsc",
     "clean": "rimraf build",
-    "dev": "nodemon --exec ./node_modules/.bin/ts-node -- ./src/index.ts",
+    "dev": "nodemon --exec ./node_modules/.bin/ts-node -r tsconfig-paths/register -- ./src/index.ts",
     "lint": "./node_modules/.bin/tslint -c \"tslint.json\" -e \"node_modules/**/*\"  \"./src/**/*.ts*\"",
     "precommit-msg": "echo 'Pre-commit checks...' && exit 0",
     "prettier": "prettier  \"./src/**/*.ts\"",
     "prettier:check": "npm run prettier -- --list-different",
     "prettier:write": "npm run prettier -- --write",
     "report": "nyc npm run test",
-    "test": "NODE_ENV=test ./node_modules/.bin/mocha --compilers ts:ts-node/register src/**/*.test.ts"
+    "test": "NODE_ENV=test ./node_modules/.bin/mocha --compilers ts:ts-node/register -r tsconfig-paths/register src/**/*.test.ts"
   },
   "precommit": [
     "precommit-msg",
@@ -43,6 +43,7 @@
     "rimraf": "^2.6.2",
     "sinon": "^4.1.2",
     "ts-node": "^3.3.0",
+    "tsconfig-paths": "^3.3.2",
     "tslint": "^5.8.0",
     "tslint-microsoft-contrib": "^5.0.1",
     "typescript": "^2.6.1"
