--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,9 @@
 {
     "compilerOptions": {
+        "baseUrl": "src",
+        "paths": {
+            "~/*": ["*"]
+        },
         "module": "commonjs",
         "target": "es6",
         "sourceMap": true,
@@ -12,7 +16,7 @@
     },
     "compileOnSave": true,
     "include": [
-        "src/**/*.ts"
+        "src/**/*"
     ],
     "exclude": [
         "node_modules",
