--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,11 @@
 language: node_js
+
 node_js:
   - "8"
+
+cache:
+  directories:
+    - node_modules
 
 install:
   - npm install -g typescript
@@ -12,12 +17,15 @@ before_script:
   - tsc -v
 
 stages:
+  - stylecheck
   - test
   - build
 
 jobs:
   include:
+    - stage: stylecheck
+      script: npm run lint && npm run prettier:check
     - stage: test
-      script: npm run lint && npm run prettier:check && npm run report
+      script: npm run report
     - stage: build
       script: npm run build
