Dont need module-alias. Use tsconfig-paths instead to resolve paths when running the output in ourDIr.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
     "compilerOptions": {
-        "baseUrl": "src",
+        "baseUrl": "./src",
         "paths": {
-            "~/*": ["*"]
+            "~/*": ["./*"]
         },
         "module": "commonjs",
         "moduleResolution": "node",
