--- a/package.json
+++ b/package.json
@@ -49,10 +49,5 @@
     "typescript": "^2.9.1"
   },
   "repository": "https://locnguyen@github.com/locnguyen/typescript-node-starter",
-  "dependencies": {
-    "module-alias": "^2.0.6"
-  },
-  "_moduleAliases": {
-    "~": "./build"
-  }
+  "dependencies": {}
 }
