--- a/package.json
+++ b/package.json
@@ -43,11 +43,13 @@
     "rimraf": "^2.6.2",
     "sinon": "^5.0.10",
     "ts-node": "^6.0.5",
-    "tsconfig-paths": "^3.3.2",
     "tslint": "^5.10.0",
     "tslint-microsoft-contrib": "^5.0.3",
     "typescript": "^2.9.1"
   },
   "repository": "https://locnguyen@github.com/locnguyen/typescript-node-starter",
-  "dependencies": {}
+  "dependencies": {
+    "dotenv": "^6.0.0",
+    "tsconfig-paths": "^3.3.2"
+  }
 }
