--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "prettier": "prettier  \"./src/**/*.ts\"",
     "prettier:check": "npm run prettier -- --list-different",
     "prettier:write": "npm run prettier -- --write",
-    "report": "nyc npm run test",
-    "test": "NODE_ENV=test ./node_modules/.bin/mocha --require ts-node/register -r tsconfig-paths/register src/**/*.test.ts"
+    "test": "cross-env NODE_ENV=test jest --coverage",
+    "test:watch": "npm run test -- --watch"
   },
   "precommit": [
     "precommit-msg",
@@ -30,26 +30,43 @@
   "author": "Loc Nguyen, lochnguyen@gmail.com",
   "license": "MIT",
   "devDependencies": {
-    "@types/chai": "^4.1.4",
-    "@types/mocha": "^5.2.5",
-    "@types/node": "^10.5.0",
-    "@types/sinon": "^5.0.1",
-    "chai": "^4.1.2",
-    "mocha": "^5.2.0",
+    "@types/jest": "^23.3.1",
+    "@types/node": "^10.7.1",
+    "cross-env": "^5.2.0",
+    "jest": "^23.5.0",
     "nodemon": "^1.18.3",
-    "nyc": "^12.0.2",
     "pre-commit": "^1.2.2",
-    "prettier": "^1.14.0",
+    "prettier": "^1.14.2",
     "rimraf": "^2.6.2",
-    "sinon": "^6.1.4",
-    "ts-node": "^7.0.0",
+    "ts-jest": "^23.1.3",
+    "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
-    "tslint-microsoft-contrib": "^5.1.0",
+    "tslint-microsoft-contrib": "^5.2.0",
     "typescript": "^3.0.1"
   },
   "repository": "https://locnguyen@github.com/locnguyen/typescript-node-starter",
   "dependencies": {
     "dotenv": "^6.0.0",
     "tsconfig-paths": "^3.3.2"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    },
+    "testRegex": "(src)/.*\\.test\\.(jsx?|tsx?)$",
+    "moduleDirectories": [
+      "node_modules"
+    ],
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ],
+    "moduleNameMapper": {
+      "~/([^\\.]*)$": "<rootDir>/src/$1"
+    }
   }
 }
