Update CI configs to run the test script

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,6 @@ jobs:
     - stage: stylecheck
       script: npm run lint && npm run prettier:check
     - stage: test
-      script: npm run report
+      script: npm test
     - stage: build
       script: npm run build
