--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,11 @@
-version: '2'
+version: '3.4'
 services:
     tsapp:
         container_name: tsapp
         build:
             context: .
             dockerfile: Dockerfile
+            target: dev
         entrypoint: "/bin/sh"
         command: "./dev.sh"
         environment:
