Fix typo in DOCKER_DRIVE envar for container scanning

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -68,7 +68,7 @@ container_scanning:
   stage: scanning
   image: docker:latest
   variables:
-    DOCKER_DRIVER: overlay2
+    DOCKER_DRIVE: overlay2
   allow_failure: true
   services:
     - docker:dind
