--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -61,10 +61,10 @@ build_image:
   before_script:
     - docker info
   script:
-    - docker build --no-cache --target release -t tsnodestarter:${CI_COMMIT_SHA:0:6} .
+    - make image 
     # - docker push to a registery
   after_script:
-    - docker rmi tsnodestarter:${CI_COMMIT_SHA:0:6}
+    - make clean-image
 
 container_scanning:
   stage: scanning
