--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "tsc",
     "clean": "rimraf build",
     "dev": "NODE_ENV=development nodemon --exec ./node_modules/.bin/ts-node -r tsconfig-paths/register -- ./src/index.ts",
-    "lint": "./node_modules/.bin/tslint -c \"tslint.json\" -e \"node_modules/**/*\"  \"./src/**/*.ts*\"",
+    "lint": "./node_modules/.bin/eslint src --ext .js,.jsx,.ts,.tsx",
     "precommit-msg": "echo 'Pre-commit checks...' && exit 0",
     "prettier": "prettier  \"./src/**/*.ts\"",
     "prettier:check": "npm run prettier -- --list-different",
@@ -30,19 +30,21 @@
   "author": "Loc Nguyen, lochnguyen@gmail.com",
   "license": "MIT",
   "devDependencies": {
-    "@types/jest": "^23.3.1",
-    "@types/node": "^10.11.2",
+    "@types/jest": "^24.9.0",
+    "@types/node": "^13.1.8",
+    "@typescript-eslint/eslint-plugin": "^2.17.0",
+    "@typescript-eslint/eslint-plugin-tslint": "^2.17.0",
+    "@typescript-eslint/parser": "^2.17.0",
     "cross-env": "^5.2.0",
-    "jest": "^24.1.0",
-    "nodemon": "^1.18.3",
+    "eslint": "^6.8.0",
+    "jest": "^24.9.0",
+    "nodemon": "^2.0.2",
     "pre-commit": "^1.2.2",
-    "prettier": "^1.15.3",
+    "prettier": "^1.19.1",
     "rimraf": "^2.6.2",
-    "ts-jest": "^23.10.2",
-    "ts-node": "^7.0.1",
-    "tslint": "^5.12.1",
-    "tslint-microsoft-contrib": "^6.0.0",
-    "typescript": "^3.2.4"
+    "ts-jest": "^24.3.0",
+    "ts-node": "^8.6.2",
+    "typescript": "^3.7.5"
   },
   "repository": "https://locnguyen@github.com/locnguyen/typescript-node-starter",
   "dependencies": {
